--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h2 {
   text-align: center;
   color: #e27d60;  /* 따뜻한 코랄 오렌지 */
   font-size: 28px;
-  margin-bottom: 30px;
+  margin: 0 auto 30px auto;
   border-bottom: 2px solid #f4d9c6;
   display: inline-block;
   padding-bottom: 5px;
