--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ section {
   margin: 30px auto;
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
   max-width: 800px;
+  text-align: center;
 }
 
 /* 링크 스타일 */
